--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,13 @@
 #nature, #city, #snow, #beach {
   display: none;
 }
+
+img {
+  width: 300px;
+  border-radius: 20px;
+  border: 1px solid #ddd;
+  padding: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
